k8s/demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: grpc-lb-demo-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 50051
        command: [ "python3", "server.py" ]
