k8s/pod-s3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-s3
  labels:
    app: lbdemo
spec:
    containers:
    - name: demo-s3
      image: grpc-lb-demo-server:latest
      imagePullPolicy: Never
      ports:
      - containerPort: 50051
      command: [ "python3", "server.py" ]
