k8s/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 50051
      targetPort: 50051
      nodePort: 30051
