k8s/demolb-service-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: demolb
spec:
  type: NodePort
  selector:
    app: demolb
  ports:
    - port: 50051
      targetPort: 50051
      nodePort: 30052
