k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
