k8s/service-mesh-linkerd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mesh-linkerd
spec:
  type: NodePort
  selector:
    app: service-mesh-linkerd
  ports:
    - port: 50051
      targetPort: 50051
      nodePort: 30053
