k8s/ingress-default-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpcserver
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/proxy-body-size: "4g"
spec:
  rules:
    - host: greeter.demo.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 50051
                  #tls:
                  #   - secretName: grpc-lb-demo-tls
                  #     #hosts:
                  #     #  - greeter.demo.com
