k8s/ingress-v1beta.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "4g"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/proxy-body-size: "4g"
  name: grpcserver
  namespace: default
spec:
  #tls:
  #- secretName: grpc-lb-demo-tls
  #  #hosts:
  #  #  - greeter.demo.com
  rules:
  - host: greeter.demo.com
    http:
      paths:
      - backend:
          serviceName: fortune-teller-service
          servicePort: grpc
